--- a/Resources/views/Form/fields.html.twig
+++ b/Resources/views/Form/fields.html.twig
@@ -5,7 +5,7 @@
         <strong class="{{ form.vars.required ? 'required' }}">
             {{ form.vars.block_prefixes[2] | trans }}
         </strong>
-        <a href="#" class="remove-block">
+        <a href="javascript:void(0);" class="remove-block">
             <i class="fa fa-trash"></i>
         </a>
         {{ form_widget(form) }}
