Simple form submission test

--- a/Test/Application/app/Resources/views/Test/index.html.twig
+++ b/Test/Application/app/Resources/views/Test/index.html.twig
@@ -1,5 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block content %}
-    {{ form(form) }}
+    {% for flashMessage in app.session.flashbag.get('success') %}
+        <div class="flash-success">
+            <strong>{{ flashMessage }}</strong>
+        </div>
+    {% endfor %}
+
+    {{ form(form, {'attr': {'novalidate': 'novalidate'}}) }}
 {% endblock %}
