some test refactoring, edit and list test actions

--- a/Test/Application/app/Resources/views/base.html.twig
+++ b/Test/Application/app/Resources/views/base.html.twig
@@ -7,6 +7,12 @@
     </head>
 
     <body>
+        {% for flashMessage in app.session.flashbag.get('success') %}
+            <div class="flash-success">
+                <strong>{{ flashMessage }}</strong>
+            </div>
+        {% endfor %}
+
         {% block content %}{% endblock %}
 
         <script type="text/javascript" src="//code.jquery.com/jquery-2.1.4.min.js"></script>
