--- a/Test/Application/app/Resources/views/Test/list.html.twig
+++ b/Test/Application/app/Resources/views/Test/list.html.twig
@@ -7,6 +7,7 @@
         {% for post in posts %}
             <li>
                 {{ post.title }}
+                <a href="{{ path('test_show', {id: post.id}) }}">Show</a>
                 <a href="{{ path('test_edit', {id: post.id}) }}">Edit</a>
             </li>
         {% else %}
