--- a/Resources/views/Form/fields.html.twig
+++ b/Resources/views/Form/fields.html.twig
@@ -6,7 +6,7 @@
             {{ form.vars.block_prefixes[2] | trans }}
         </strong>
         <a href="javascript:void(0);" class="remove-block">
-            <i class="fa fa-trash"></i>
+            <i class="fa fa-trash">{{ 'remove.block' | trans }}</i>
         </a>
         {{ form_widget(form) }}
     </div>
