--- a/Test/Application/app/Resources/views/base.html.twig
+++ b/Test/Application/app/Resources/views/base.html.twig
@@ -16,6 +16,7 @@
         {% block content %}{% endblock %}
 
         <script type="text/javascript" src="//code.jquery.com/jquery-2.1.4.min.js"></script>
+        <script type="text/javascript" src="//code.jquery.com/ui/1.11.3/jquery-ui.min.js"></script>
         <script type="text/javascript" src="{{ asset('bundles/origammiblocks/js/main.js') }}"></script>
     </body>
 </html>
