--- a/Resources/views/Form/fields.html.twig
+++ b/Resources/views/Form/fields.html.twig
@@ -9,6 +9,7 @@
             <i class="fa fa-trash">{{ 'remove.block' | trans }}</i>
         </a>
         {{ form_widget(form) }}
+        {{ form_js(form) }}
     </div>
 {% endblock %}
 
